--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,6 +10,13 @@
     width: 50%;
 }
 
+#wellcome{
+	font-size: 50rem;
+	font-weight: 900;
+	color: #fff;
+}
+
+
 /* Animation */
 .btnFlash,
 .btnSave {
