--- a/css/login.css
+++ b/css/login.css
@@ -53,9 +53,11 @@ form {
 input {
     background-color: #eee;
     border: none;
-    padding: 12px 15px;
-    margin: 8px 0;
+    padding: 1.2rem 1.5rem;
+    margin: .8rem 0;
     width: 100%;
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
 input::-webkit-input-placeholder {
