--- a/css/login.css
+++ b/css/login.css
@@ -247,8 +247,33 @@ input::placeholder {
     color: red;
 }
 
-@media screen and (max-width:599px){
-    #container{
+.btnshine {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    outline: none;
+    overflow: hidden;
+}
+
+.btnshine::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -75%;
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+    transform: skewX(-25deg);
+}
+
+.btnshine::before {
+    animation: shine 0.7s;
+}
+
+@media screen and (max-width:599px) {
+    #container {
         zoom: .5;
         margin: 0 4rem;
         margin: 40rem auto 0 auto;
