--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@
 	animation-delay: 0.6s;
 }
 
+#product-table-body .productImg{
+	width: 20rem;
+	height: 15rem;
+}
+
 @-webkit-keyframes shiny {
 	0% {
 		transform: translateX(-18rem);
