--- a/css/common.css
+++ b/css/common.css
@@ -789,6 +789,9 @@ mark:after {
   color: #212529;
 }
 
+.main-container .nav .option3 {
+  cursor: not-allowed;
+}
 .page-link {
   color: #5500cb !important;
   font-weight: 700;
