--- a/css/style-product.css
+++ b/css/style-product.css
@@ -2,3 +2,10 @@
     width: 100px;
     height: 60px;
 }
+
+#add-product-button {
+    font-size: 1.2rem;
+    font-weight: 700;
+    padding: 0.7rem 1.6rem;
+    opacity: .9;
+}
