--- a/css/common.css
+++ b/css/common.css
@@ -247,6 +247,10 @@ hr {
   padding-bottom: 14rem;
 }
 
+.pt5 {
+  padding-top: .5rem;
+}
+
 .pt10 {
   padding-top: 1rem;
 }
@@ -307,6 +311,11 @@ hr {
 
 .pl20 {
   padding-left: 2rem;
+}
+
+.plr10 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .plr20 {
